--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -14,8 +14,7 @@
       <small id="welcomeSub">Verify • Report • Earn</small>
     </header>
 
-    <main id="main">
-      <!-- Home / Links merged -->
+    <main>
       <section id="homeSection" class="tab">
         <div class="statsBar">
           <div>Links: <span id="statTotal">0</span></div>
@@ -38,19 +37,16 @@
         <ul id="recentList" class="list"></ul>
       </section>
 
-      <!-- Earn -->
       <section id="earnSection" class="tab hidden">
         <h2>Earn</h2>
         <div id="tasksList" class="list"></div>
       </section>
 
-      <!-- Leaderboard -->
       <section id="boardSection" class="tab hidden">
         <h2>Leaderboard</h2>
         <ul id="leaderList" class="list"></ul>
       </section>
 
-      <!-- Profile -->
       <section id="profileSection" class="tab hidden">
         <h2>Profile</h2>
         <p>Username: <strong id="profUsername">-</strong></p>
