--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,43 +14,78 @@
     </header>
 
     <main class="container">
-      <!-- Home / Links merged -->
-      <section id="home" class="page active">
+      <!-- Home -->
+      <section id="home" class="page active" aria-hidden="false">
         <div class="card">
           <h2>Find or Add a Link</h2>
-          <form id="linkForm">
+          <form id="linkForm" onsubmit="return false;">
             <input id="linkInput" type="url" placeholder="Paste a URL (https://...)" autocomplete="off" required />
             <div class="row">
-              <button id="checkBtn" type="button" class="btn neutral">Check</button>
-              <button id="addBtn" type="button" class="btn primary">Add</button>
-              <button id="reportBtn" type="button" class="btn warn">Report</button>
+              <button id="checkBtn" type="button" class="btn neutral">🔍 Check</button>
+              <button id="addBtn" type="button" class="btn primary">➕ Add</button>
+              <button id="reportBtn" type="button" class="btn warn">🚨 Report</button>
             </div>
           </form>
 
-          <div id="result" class="result hidden"></div>
+          <div id="result" class="result hidden" role="status" aria-live="polite"></div>
         </div>
+      </section>
 
-        <div id="earnCard" class="card small">
-          <h3>Earn</h3>
-          <p>Earn points by adding or reporting links. Check your dashboard for totals.</p>
-          <div id="earnStats"></div>
+      <!-- Earn -->
+      <section id="earn" class="page" aria-hidden="true">
+        <div class="card">
+          <h2>Earn & Rewards</h2>
+          <div id="earnStats" class="earn-stats">
+            <div class="stat">
+              <div class="stat-val" id="pointsVal">—</div>
+              <div class="stat-label">Points</div>
+            </div>
+            <div class="stat">
+              <div class="stat-val" id="rankVal">—</div>
+              <div class="stat-label">Rank</div>
+            </div>
+            <div class="stat">
+              <div class="stat-val" id="linksCount">—</div>
+              <div class="stat-label">Links</div>
+            </div>
+          </div>
+
+          <div class="progress-wrapper">
+            <div class="progress-label">Progress to next reward</div>
+            <div class="progress-bar"><div id="progressFill" style="width:0%"></div></div>
+            <div id="progressText" class="progress-text">—</div>
+          </div>
+
+          <div class="quests">
+            <h3>Daily Quests</h3>
+            <ul id="questList">
+              <!-- populated by JS -->
+            </ul>
+          </div>
+
+          <div class="referral">
+            <h3>Invite a friend</h3>
+            <div id="referralBox">—</div>
+            <button id="copyReferral" class="btn neutral">Copy referral link</button>
+          </div>
         </div>
       </section>
 
       <!-- Leaderboard -->
-      <section id="leaderboard" class="page">
+      <section id="leaderboard" class="page" aria-hidden="true">
         <div class="card">
           <h2>Leaderboard</h2>
           <div id="leaderboardList">Loading...</div>
+          <div style="margin-top:10px"><button id="refreshLeaderboard" class="btn neutral">Refresh</button></div>
         </div>
       </section>
 
       <!-- Profile -->
-      <section id="profile" class="page">
+      <section id="profile" class="page" aria-hidden="true">
         <div class="card">
           <h2>My Profile</h2>
-          <div id="profileBox">Enter your Telegram ID to load profile:</div>
-          <form id="profileForm">
+          <div id="profileBox">Load your profile (we detect Telegram inside the app automatically).</div>
+          <form id="profileForm" onsubmit="return false;">
             <input id="profileInput" type="text" placeholder="Your Telegram ID (e.g. 827943484)" />
             <button type="button" id="profileLoad" class="btn primary">Load Profile</button>
           </form>
@@ -59,14 +94,15 @@
       </section>
     </main>
 
-    <nav class="bottom-nav">
+    <nav class="bottom-nav" role="navigation" aria-label="Main menu">
       <button class="menu-item active" data-target="home">Home</button>
+      <button class="menu-item" data-target="earn">Earn</button>
       <button class="menu-item" data-target="leaderboard">Leaderboard</button>
       <button class="menu-item" data-target="profile">Profile</button>
     </nav>
 
     <!-- global loading overlay -->
-    <div id="loader" class="overlay hidden"><div class="spinner"></div></div>
+    <div id="loader" class="overlay hidden" aria-hidden="true"><div class="spinner" role="status"></div></div>
   </div>
 
   <script type="module" src="/webapp/app.js"></script>
