--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,6 +10,10 @@
   <div id="app">
     <header class="topbar">
       <h1>Linktory</h1>
+      <div id="status">Loading...</div>
+<div id="userBadge">👤</div>
+<button id="refreshBtn">🔄 Refresh</button>
+
       <div id="userBadge" class="badge">—</div>
     </header>
 
@@ -83,3 +87,4 @@
   <script type="module" src="/webapp/app.js"></script>
 </body>
 </html>
+
