--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,6 +12,10 @@
       <h1>Linktory</h1>
       <div id="userBadge" class="badge">—</div>
     </header>
+    <div id="status" style="padding:8px; background:#f0f0f0; font-size:0.9em; color:#333;">
+  Checking Telegram login...
+</div>
+
 
     <main class="container">
       <section id="home" class="page active" aria-hidden="false">
@@ -83,4 +87,5 @@
   <script type="module" src="/webapp/app.js"></script>
 </body>
 </html>
+
 
