--- a/webapp/index.html
+++ b/webapp/index.html
@@ -79,6 +79,13 @@
           <ul id="taskList" class="task-list"></ul>
         </div>
       </section>
+<div id="tasksContainer">
+  <div class="section-header">All Tasks</div>
+  <ul id="regularTasks"></ul>
+
+  <div class="section-header">Moderator Tasks</div>
+  <ul id="moderatorTasks"></ul>
+</div>
 
       <!-- Leaderboard Section -->
       <section id="leaderboard" class="page" aria-hidden="true">
@@ -173,3 +180,4 @@
   </script>
 </body>
 </html>
+
